syntax = "proto3";

option java_outer_classname = "ApiServiceProto";
option java_multiple_files = true;
option java_package = "com.planet.staccato.grpc.generated";
option java_generic_services = true;

message ApiRequest {
    repeated double bbox = 1;
    string time = 2;
    string search = 3;
    string next = 4;
    int32 limit = 5;
    repeated string ids = 6;
    repeated string collections = 7;
    string fields = 8;
    string intersects = 9;
    string sort = 10;
}

message ApiIdRequest {
    string id = 1;
}


message ApiItemBytes {
    bytes item = 1;
}

service ApiService {
    rpc search(ApiRequest) returns (stream ApiItemBytes) {}
    rpc searchById(ApiIdRequest) returns (ApiItemBytes) {}
}